--- a/docs/css/mobile/password.css
+++ b/docs/css/mobile/password.css
@@ -18,6 +18,7 @@
 #txtPublicPart {
     grid-column: 2 / span 4;
     grid-row: 2;
+    width: auto;
 }
 
 #spnPublicPartSize {
@@ -44,6 +45,7 @@
 #txtAlphabet {
     grid-column: 2;
     grid-row: 5;
+    width: auto;
 }
 
 #spnAlphabetSize {
@@ -86,6 +88,7 @@
 #txtResultPassword {
     grid-column: 2 / span 4;
     grid-row: 10;
+    width: auto;
 }
 
 #spnResultPasswordLength {
