--- a/web/src/css/base/common.css
+++ b/web/src/css/base/common.css
@@ -35,7 +35,13 @@ button {
 }
 
 #txtPath {
-    width: 100%;
+    width: auto;
+}
+
+#divStoragePathContainer {
+    display: grid;
+    grid-auto-flow: row;
+    grid-auto-rows: auto;
 }
 
 #lblMatchingPath, #lblMatchingPathLabel {
